# wedding-studio

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.py  requirements.txt
app/: __init__.py  models.py
app/routes/: __init__.py  auth.py  budget.py  checklist.py  guests.py  main.py  seating.py  utils.py  vendors.py  wedding.py
app/services/: ai_service.py  csv_service.py  pdf_service.py
backend/: .env.example  config.py  pyproject.toml
backend/app/: __init__.py  models.py
backend/app/routes/: __init__.py  auth.py  budget.py  checklist.py  guests.py  seating.py  settings.py  utils.py  vendors.py  wedding.py
backend/app/services/: ai_service.py  budget_service.py  checklist_service.py  csv_service.py  pdf_service.py
backend/app/static/css/: style.css
backend/app/static/js/: csrf.js
backend/app/templates/: base.html  index.html  settings.html
backend/app/templates/auth/: login.html
backend/app/templates/errors/: csrf.html
backend/app/templates/wedding/: _guest_rows.html  create.html  detail.html  edit.html  seating.html  seating_print.html
backend/app/utils/: connections.py
backend/migrations/versions/: 32317c6c89f4_add_vendor_model_and_vendor_id_to_.py  42b1c5398bcd_add_contract_url_to_vendor.py  4f5a78e3e9ac_add_user_profile_fields.py  6aea3ee4af32_add_budgetcategory_expense_and_wedding_.py  6e76c3626f47_add_weddingtable_model_and_guest_table_.py  7ca08c6b7724_add_final_payment_fields_to_vendor.py  a6b422fa4c93_add_checklistitem_model.py  b8e32f1d9000_create_core_schema.py  f1eb36a7e4f5_add_rsvp_contact_to_wedding.py
(+23 files in other folders)
